Use published likhtar npm package

--- a/assets/package.json
+++ b/assets/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap-vue": "^2.1.0",
-    "likhtar": "file:../likhtar",
+    "likhtar": "0.0.1",
     "moment": "^2.24.0",
     "vue": "^2.6.11"
   },
