--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -73,6 +73,9 @@ jobs:
       - name: Install Dependencies
         run: mix deps.get
 
+      - name: Start Docker
+        run: docker-compose up --detach
+
       - name: Test
         run: |
           mix compile --warnings-as-errors
