--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,19 @@
 version: '3'
 services:
+  postgres:
+    image: 'timescale/timescaledb:latest-pg14'
+    restart: always
+    hostname: db
+    ports:
+      - "5432:5432"
+    volumes:
+      - 'postgres_data:/var/lib/postgresql/data'
+    environment:
+      PGDATA: /var/lib/postgresql/data/pgdata
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: postgres
+      POSTGRES_HOST_AUTH_METHOD: trust
+
   tectonicdb:
     image: "yurikoval/tectonicdb"
     ports:
@@ -9,3 +23,9 @@ services:
       - TDB_LOG_FILE_NAME=/dev/null
       - TDB_DTF_FOLDER=/export/db
     command: /usr/local/bin/tdb-server -vv
+    volumes:
+      - 'tectonicdb_data:/export/db'
+
+volumes:
+  postgres_data:
+  tectonicdb_data:
