use docker compose

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,7 +58,7 @@ jobs:
         run: mix deps.get
 
       - name: Start Docker
-        run: docker-compose up --detach
+        run: docker compose up --detach
 
       - name: Test
         run: |
